--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -18,9 +18,12 @@ jobs:
         with:
           submodules: true
 
-      # Run Make script to pull in changes from upstream.
-      - name: Update from upstream
+      - name: Set Git committer identity
         run: |
           git config user.name "Github Actions"
           git config user.email "github-actions@github.com"
-          make update
+
+      - uses: mxschmitt/action-tmate@v3
+
+      - name: Update from upstream
+        run: make update
