Move to cherry-picking commits
Patching seems to work locally but die when running as GitHub Action,
and cherry-picking seems more reliable even if it's much uglier.

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -13,11 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout both superproject and submodule, with full history (to allow patch generation).
+      # Checkout both superproject and submodule, with shallow history (the Makefile will take care of fetching more).
       - uses: actions/checkout@v2
         with:
           submodules: true
-          fetch-depth: 0
 
       # Set username and email so that commits can be made.
       - name: Set Git committer identity
